# nvidia-image-capture

./: CMakeLists.txt  README.md  aws_upload_capture.py  cron_camera_captures.sh  crontab.txt  docker_ubuntu_setup.txt
.github/workflows/: ubuntu.yml
source/: greeter.cpp
standalone/: CMakeLists.txt
standalone/source/: main.cpp
